smvlang/y.output
Terminals which are not used

   UNTIL_Token
   A_Token
   E_Token
   EG_Token
   EF_Token
   EX_Token
   DIVIDE_Token
   TIMES_Token


Grammar

    0 $accept: start $end

    1 start: modules
    2      | formula

    3 modules: module
    4        | modules module

    5 module: module_head sections

    6 module_name: STRING_Token
    7            | QUOTE_Token

    8 module_head: MODULE_Token module_name

    9 @1: /* empty */

   10 module_head: MODULE_Token module_name @1 '(' module_argument_list_opt ')'

   11 sections: /* empty */
   12         | section sections

   13 section: VAR_Token vardecls
   14        | VAR_Token
   15        | INIT_Token formula
   16        | INIT_Token formula ';'
   17        | INIT_Token
   18        | TRANS_Token formula
   19        | TRANS_Token formula ';'
   20        | TRANS_Token
   21        | SPEC_Token formula
   22        | SPEC_Token formula ';'
   23        | SPEC_Token
   24        | ASSIGN_Token assignments
   25        | ASSIGN_Token
   26        | DEFINE_Token defines
   27        | DEFINE_Token
   28        | INVAR_Token formula
   29        | INVAR_Token formula ';'
   30        | INVAR_Token
   31        | FAIRNESS_Token formula
   32        | FAIRNESS_Token formula ';'
   33        | FAIRNESS_Token
   34        | EXTERN_Token extern_var
   35        | EXTERN_Token extern_var ';'

   36 extern_var: variable_name EQUAL_Token QUOTE_Token

   37 vardecls: vardecl
   38         | vardecl vardecls

   39 module_argument: variable_name

   40 module_argument_list: module_argument
   41                     | module_argument_list ',' module_argument

   42 module_argument_list_opt: /* empty */
   43                         | module_argument_list

   44 type: ARRAY_Token NUMBER_Token DOTDOT_Token NUMBER_Token OF_Token type
   45     | BOOLEAN_Token
   46     | '{' enum_list '}'
   47     | NUMBER_Token DOTDOT_Token NUMBER_Token
   48     | usertype

   49 usertype: module_name
   50         | module_name '(' formula_list ')'

   51 enum_list: enum_element
   52          | enum_list ',' enum_element

   53 enum_element: STRING_Token

   54 vardecl: variable_name ':' type ';'

   55 assignments: assignment
   56            | assignment assignments
   57            | define
   58            | define assignments

   59 assignment: assignment_head '(' assignment_var ')' BECOMES_Token formula ';'

   60 assignment_var: variable_name

   61 assignment_head: init_Token
   62                | NEXT_Token

   63 defines: define
   64        | define defines

   65 define: assignment_var BECOMES_Token formula ';'

   66 formula: term

   67 term: variable_name
   68     | NEXT_Token '(' term ')'
   69     | '(' formula ')'
   70     | '{' formula_list '}'
   71     | INC_Token '(' term ')'
   72     | DEC_Token '(' term ')'
   73     | ADD_Token '(' term ',' term ')'
   74     | SUB_Token '(' term ',' term ')'
   75     | NUMBER_Token
   76     | CASE_Token cases ESAC_Token
   77     | SWITCH_Token '(' variable_name ')' '{' switches '}'
   78     | MINUS_Token term
   79     | term PLUS_Token term
   80     | term MINUS_Token term
   81     | term EQUIV_Token term
   82     | term IMPLIES_Token term
   83     | term XOR_Token term
   84     | term OR_Token term
   85     | term AND_Token term
   86     | NOT_Token term
   87     | AX_Token term
   88     | AF_Token term
   89     | AG_Token term
   90     | term EQUAL_Token term
   91     | term NOTEQUAL_Token term
   92     | term LT_Token term
   93     | term LE_Token term
   94     | term GT_Token term
   95     | term GE_Token term
   96     | term UNION_Token term

   97 formula_list: formula
   98             | formula_list ',' formula

   99 variable_name: qstring_list

  100 qstring_list: QSTRING_Token
  101             | STRING_Token
  102             | qstring_list DOT_Token QSTRING_Token
  103             | qstring_list DOT_Token STRING_Token
  104             | qstring_list '[' NUMBER_Token ']'
  105             | qstring_list '(' NUMBER_Token ')'

  106 cases: /* empty */
  107      | cases case

  108 case: formula ':' formula ';'

  109 switches: /* empty */
  110         | switches switch

  111 switch: NUMBER_Token ':' term ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 50 59 68 69 71 72 73 74 77 105
')' (41) 10 50 59 68 69 71 72 73 74 77 105
',' (44) 41 52 73 74 98
':' (58) 54 108 111
';' (59) 16 19 22 29 32 35 54 59 65 108 111
'[' (91) 104
']' (93) 104
'{' (123) 46 70 77
'}' (125) 46 70 77
error (256)
AG_Token (258) 89
AX_Token (259) 87
AF_Token (260) 88
INIT_Token (261) 15 16 17
TRANS_Token (262) 18 19 20
SPEC_Token (263) 21 22 23
VAR_Token (264) 13 14
DEFINE_Token (265) 26 27
ASSIGN_Token (266) 24 25
INVAR_Token (267) 28 29 30
FAIRNESS_Token (268) 31 32 33
MODULE_Token (269) 8 10
ARRAY_Token (270) 44
OF_Token (271) 44
DOTDOT_Token (272) 44 47
BOOLEAN_Token (273) 45
EXTERN_Token (274) 34 35
NEXT_Token (275) 62 68
INC_Token (276) 71
DEC_Token (277) 72
CASE_Token (278) 76
ESAC_Token (279) 76
BECOMES_Token (280) 59 65
ADD_Token (281) 73
SUB_Token (282) 74
SWITCH_Token (283) 77
init_Token (284) 61
PLUS_Token (285) 79
STRING_Token (286) 6 53 101 103
QSTRING_Token (287) 100 102
QUOTE_Token (288) 7 36
NUMBER_Token (289) 44 47 75 104 105 111
IMPLIES_Token (290) 82
UNION_Token (291) 96
EQUIV_Token (292) 81
XOR_Token (293) 83
OR_Token (294) 84
AND_Token (295) 85
NOT_Token (296) 86
UNTIL_Token (297)
A_Token (298)
E_Token (299)
EG_Token (300)
EF_Token (301)
EX_Token (302)
GE_Token (303) 95
LE_Token (304) 93
GT_Token (305) 94
LT_Token (306) 92
NOTEQUAL_Token (307) 91
EQUAL_Token (308) 36 90
MINUS_Token (309) 78 80
DIVIDE_Token (310)
TIMES_Token (311)
UMINUS (312)
DOT_Token (313) 102 103


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
start (69)
    on left: 1 2, on right: 0
modules (70)
    on left: 3 4, on right: 1 4
module (71)
    on left: 5, on right: 3 4
module_name (72)
    on left: 6 7, on right: 8 10 49 50
module_head (73)
    on left: 8 10, on right: 5
@1 (74)
    on left: 9, on right: 10
sections (75)
    on left: 11 12, on right: 5 12
section (76)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
    31 32 33 34 35, on right: 12
extern_var (77)
    on left: 36, on right: 34 35
vardecls (78)
    on left: 37 38, on right: 13 38
module_argument (79)
    on left: 39, on right: 40 41
module_argument_list (80)
    on left: 40 41, on right: 41 43
module_argument_list_opt (81)
    on left: 42 43, on right: 10
type (82)
    on left: 44 45 46 47 48, on right: 44 54
usertype (83)
    on left: 49 50, on right: 48
enum_list (84)
    on left: 51 52, on right: 46 52
enum_element (85)
    on left: 53, on right: 51 52
vardecl (86)
    on left: 54, on right: 37 38
assignments (87)
    on left: 55 56 57 58, on right: 24 56 58
assignment (88)
    on left: 59, on right: 55 56
assignment_var (89)
    on left: 60, on right: 59 65
assignment_head (90)
    on left: 61 62, on right: 59
defines (91)
    on left: 63 64, on right: 26 64
define (92)
    on left: 65, on right: 57 58 63 64
formula (93)
    on left: 66, on right: 2 15 16 18 19 21 22 28 29 31 32 59 65 69
    97 98 108
term (94)
    on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    85 86 87 88 89 90 91 92 93 94 95 96, on right: 66 68 71 72 73 74
    78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 111
formula_list (95)
    on left: 97 98, on right: 50 70 98
variable_name (96)
    on left: 99, on right: 36 39 54 60 67 77
qstring_list (97)
    on left: 100 101 102 103 104 105, on right: 99 102 103 104 105
cases (98)
    on left: 106 107, on right: 76 107
case (99)
    on left: 108, on right: 107
switches (100)
    on left: 109 110, on right: 77 110
switch (101)
    on left: 111, on right: 110


state 0

    0 $accept: . start $end

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    MODULE_Token   shift, and go to state 4
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    NUMBER_Token   shift, and go to state 14
    NOT_Token      shift, and go to state 15
    MINUS_Token    shift, and go to state 16
    '('            shift, and go to state 17
    '{'            shift, and go to state 18

    start          go to state 19
    modules        go to state 20
    module         go to state 21
    module_head    go to state 22
    formula        go to state 23
    term           go to state 24
    variable_name  go to state 25
    qstring_list   go to state 26


state 1

   89 term: AG_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    NUMBER_Token   shift, and go to state 14
    NOT_Token      shift, and go to state 15
    MINUS_Token    shift, and go to state 16
    '('            shift, and go to state 17
    '{'            shift, and go to state 18

    term           go to state 27
    variable_name  go to state 25
    qstring_list   go to state 26


state 2

   87 term: AX_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    NUMBER_Token   shift, and go to state 14
    NOT_Token      shift, and go to state 15
    MINUS_Token    shift, and go to state 16
    '('            shift, and go to state 17
    '{'            shift, and go to state 18

    term           go to state 28
    variable_name  go to state 25
    qstring_list   go to state 26


state 3

   88 term: AF_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    NUMBER_Token   shift, and go to state 14
    NOT_Token      shift, and go to state 15
    MINUS_Token    shift, and go to state 16
    '('            shift, and go to state 17
    '{'            shift, and go to state 18

    term           go to state 29
    variable_name  go to state 25
    qstring_list   go to state 26


state 4

    8 module_head: MODULE_Token . module_name
   10            | MODULE_Token . module_name @1 '(' module_argument_list_opt ')'

    STRING_Token  shift, and go to state 30
    QUOTE_Token   shift, and go to state 31

    module_name  go to state 32


state 5

   68 term: NEXT_Token . '(' term ')'

    '('  shift, and go to state 33


state 6

   71 term: INC_Token . '(' term ')'

    '('  shift, and go to state 34


state 7

   72 term: DEC_Token . '(' term ')'

    '('  shift, and go to state 35


state 8

   76 term: CASE_Token . cases ESAC_Token

    $default  reduce using rule 106 (cases)

    cases  go to state 36


state 9

   73 term: ADD_Token . '(' term ',' term ')'

    '('  shift, and go to state 37


state 10

   74 term: SUB_Token . '(' term ',' term ')'

    '('  shift, and go to state 38


state 11

   77 term: SWITCH_Token . '(' variable_name ')' '{' switches '}'

    '('  shift, and go to state 39


state 12

  101 qstring_list: STRING_Token .

    $default  reduce using rule 101 (qstring_list)


state 13

  100 qstring_list: QSTRING_Token .

    $default  reduce using rule 100 (qstring_list)


state 14

   75 term: NUMBER_Token .

    $default  reduce using rule 75 (term)


state 15

   86 term: NOT_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    NUMBER_Token   shift, and go to state 14
    NOT_Token      shift, and go to state 15
    MINUS_Token    shift, and go to state 16
    '('            shift, and go to state 17
    '{'            shift, and go to state 18

    term           go to state 40
    variable_name  go to state 25
    qstring_list   go to state 26


state 16

   78 term: MINUS_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    NUMBER_Token   shift, and go to state 14
    NOT_Token      shift, and go to state 15
    MINUS_Token    shift, and go to state 16
    '('            shift, and go to state 17
    '{'            shift, and go to state 18

    term           go to state 41
    variable_name  go to state 25
    qstring_list   go to state 26


state 17

   69 term: '(' . formula ')'

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    NUMBER_Token   shift, and go to state 14
    NOT_Token      shift, and go to state 15
    MINUS_Token    shift, and go to state 16
    '('            shift, and go to state 17
    '{'            shift, and go to state 18

    formula        go to state 42
    term           go to state 24
    variable_name  go to state 25
    qstring_list   go to state 26


state 18

   70 term: '{' . formula_list '}'

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    NUMBER_Token   shift, and go to state 14
    NOT_Token      shift, and go to state 15
    MINUS_Token    shift, and go to state 16
    '('            shift, and go to state 17
    '{'            shift, and go to state 18

    formula        go to state 43
    term           go to state 24
    formula_list   go to state 44
    variable_name  go to state 25
    qstring_list   go to state 26


state 19

    0 $accept: start . $end

    $end  shift, and go to state 45


state 20

    1 start: modules .
    4 modules: modules . module

    MODULE_Token  shift, and go to state 4

    $default  reduce using rule 1 (start)

    module       go to state 46
    module_head  go to state 22


state 21

    3 modules: module .

    $default  reduce using rule 3 (modules)


state 22

    5 module: module_head . sections

    INIT_Token      shift, and go to state 47
    TRANS_Token     shift, and go to state 48
    SPEC_Token      shift, and go to state 49
    VAR_Token       shift, and go to state 50
    DEFINE_Token    shift, and go to state 51
    ASSIGN_Token    shift, and go to state 52
    INVAR_Token     shift, and go to state 53
    FAIRNESS_Token  shift, and go to state 54
    EXTERN_Token    shift, and go to state 55

    $default  reduce using rule 11 (sections)

    sections  go to state 56
    section   go to state 57


state 23

    2 start: formula .

    $default  reduce using rule 2 (start)


state 24

   66 formula: term .
   79 term: term . PLUS_Token term
   80     | term . MINUS_Token term
   81     | term . EQUIV_Token term
   82     | term . IMPLIES_Token term
   83     | term . XOR_Token term
   84     | term . OR_Token term
   85     | term . AND_Token term
   90     | term . EQUAL_Token term
   91     | term . NOTEQUAL_Token term
   92     | term . LT_Token term
   93     | term . LE_Token term
   94     | term . GT_Token term
   95     | term . GE_Token term
   96     | term . UNION_Token term

    PLUS_Token      shift, and go to state 58
    IMPLIES_Token   shift, and go to state 59
    UNION_Token     shift, and go to state 60
    EQUIV_Token     shift, and go to state 61
    XOR_Token       shift, and go to state 62
    OR_Token        shift, and go to state 63
    AND_Token       shift, and go to state 64
    GE_Token        shift, and go to state 65
    LE_Token        shift, and go to state 66
    GT_Token        shift, and go to state 67
    LT_Token        shift, and go to state 68
    NOTEQUAL_Token  shift, and go to state 69
    EQUAL_Token     shift, and go to state 70
    MINUS_Token     shift, and go to state 71

    $default  reduce using rule 66 (formula)


state 25

   67 term: variable_name .

    $default  reduce using rule 67 (term)


state 26

   99 variable_name: qstring_list .
  102 qstring_list: qstring_list . DOT_Token QSTRING_Token
  103             | qstring_list . DOT_Token STRING_Token
  104             | qstring_list . '[' NUMBER_Token ']'
  105             | qstring_list . '(' NUMBER_Token ')'

    DOT_Token  shift, and go to state 72
    '('        shift, and go to state 73
    '['        shift, and go to state 74

    $default  reduce using rule 99 (variable_name)


state 27

   79 term: term . PLUS_Token term
   80     | term . MINUS_Token term
   81     | term . EQUIV_Token term
   82     | term . IMPLIES_Token term
   83     | term . XOR_Token term
   84     | term . OR_Token term
   85     | term . AND_Token term
   89     | AG_Token term .
   90     | term . EQUAL_Token term
   91     | term . NOTEQUAL_Token term
   92     | term . LT_Token term
   93     | term . LE_Token term
   94     | term . GT_Token term
   95     | term . GE_Token term
   96     | term . UNION_Token term
